# koda

./: .env.prod.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MEMORY.md  README.md  ROADMAP.md  docker-compose.prod.yml  issues.md  package-lock.json  package.json
.forgejo/workflows/: pullrepo_github.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md  task.md
.github/workflows/: ci.yml  harness-registry.yml
.harness/: build-admin.yaml  build-api.yaml  build-dashboard.yaml  build-gateway.yaml  build-git-manager.yaml  build-mcp-gateway.yaml  build-orchestrator.yaml  build-web-client.yaml  build-worker.yaml  build.yaml  pullrepo_github.yaml
.sqlx/: query-00bd61ab57e179b1270e71fdaca2dfd4c7251ee8064b3366b2c9796837c024ef.json  query-00eb7481d00633d3a0853d228a6dadba3c932ddb066daf23bfba4f34f28eaacb.json  query-012c6bd6d932a4b2816c0d4c0be8d9c7eb43792597d5163ce4a3201b7ba259db.json  query-025b46983df83f91bd54610e28f2fe2b1922535c6297951bbb5e27325d9a88cf.json  query-027b1d195bb691f3c6fdbc787e6f621567140153d4faa3c949d2c5fe2c4f7b5c.json  query-048d83111f758e879fc27aa2216b8f6e980ffcf4095b9b34400b3087007dd916.json  query-057b5e5654970d873796263563f0fc68d24d6a474c1b72122401b9ba8b023e2b.json  query-05939652244ecd56c59605928f8a506585ce33039ce0d7c9f84074dcfd9c5b1c.json  query-05d36d9ee9e8448a49aa73ef3d56b455e11fdf178898ffa2ffa6ca65643fae88.json  query-06d0ed5e4cbefb8e4cd46144093e2f98b174ea1824e78dd8d3a31dec43982c4c.json  query-06f21dbef53dd531ba45267cbd5fe0cfdd27b8c57dc44fca3b64903e8a916e08.json  query-06fc4148333cfd033f513b42e35a171f2720b1ebd3199e8a0b71b47c4c1dc306.json  query-0774092bf32c0a7a3d15afc48023f1224cd00e4ce5c859d7d868eedf47971cfc.json  query-079619720659a0acf4e9c8b9755df66a271ccf3c174a8d13269ec9a35f82e7c7.json  query-07e1af62a007d074f2a9ebacaf0c955815c11e3aaa47b68071a0c3795a7e34e5.json  query-096d9c481f4ea5f58194ca1498b672d3ca6156955257c550deca3675ba0e528e.json  query-09a1d053be824e845df053c692b7ae7613aa47594ca466acd397feeb40d87e4f.json  query-09e486a1d3f18e5f361802ccb450bb2ea19792ce06e0ec56e23d60b873dd4028.json  query-0a58b599cfd106824c51189146171a39a90787474049cbf09eb48b9f385bf7f0.json  query-0bc5e7e18c9284504c7feefa6ee07bfa0b1a20fa7459357b6193466a865f9358.json  query-0be3cf13c4bad37a71779fba3e04fa9ee6fcdaf000722fde58821ab72d6c1fbd.json  query-0cbf0acfff3211c633636cc2aa891d5630c020c3085260254a655d2a74e9d31d.json  query-0db1573511bb89d6bd59f320f4daad3e71ff6e95c120c2c8dae5fd3f7b93bb0c.json  query-0e0b031dfb2fd73539be8df98b57ec4e82047daad6130ebe0a149f4dd1a1ed09.json  query-0e38c9db4caf47268029acdead7a91ce3dab54343f367a6469d9e57460392a8f.json  query-0fc349f7f984e54f7f69c489916b43e55463b632a830289ba05b7ee23cc653c3.json  query-10ac32c46dd64da1612dd3ef1729fe4265ce099658c02ddceda26aa15103b7c1.json  query-118bffc258a7493686a7a686b4d00833d36520b559cd6113595e966639065d54.json  query-11d7dd1d84dfb313f70760a35648e359d8375ea6a41f053342002f474ee9ea7d.json  query-143cd1e19517498e1f2a55a6d0a3ef72b65f8615de4c4b952771b146b9ffd340.json  query-151c724353ebc5e9199aa136d29c9d181db0cc6704f7c50cbd8b75c5e0101130.json  query-15f36d7699bc67e414f498add87a2e3e9810d465cc71b0a9cf713e9bd41dd2eb.json  query-1764df95dc10919888849cf52e2b7e019fa4eb6fe4857ff7991d1019b3e7924b.json  query-17b302486a5bf1392a2a1bac9c04856959fd242fc2b6e176aab16383ddf73b56.json  query-19ba121e9c610eb1dfdc40cf4b991624b5b2f97438d5edc2f406baeb4f2be2ad.json  query-1a4edf7493f42d79024383776adad6cce4e1044d005b9a8c2b271665e568d456.json  query-1a8d00a7dd55211922af99b3c048ff7dde03db114603d2b9ee9f46576f860019.json  query-1c7492e43c18ad27b054aad4ddaae5939eaf93d632fa22addf054e926d6a4a02.json  query-1c96b1036fe18da6ed437956e18872a2bb490fb89ad76bfc1c9e4517e336a552.json  query-1ce9506362203b6ad7786fcb9b1d32861e9980c1fdbf787c60f7ab4d11a50067.json  (+201 more)
apps/admin/: Dockerfile  next.config.mjs  package.json
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/config/: default.yaml
apps/api/src/: audit.rs  config.rs  db.rs  error.rs  jobs.rs  lib.rs  main.rs  openapi.rs  routes.rs
apps/api/src/ai/: anthropic.rs  context_builder.rs  mod.rs  provider.rs
apps/api/src/handlers/: admin.rs  auth.rs  env_vars.rs  git.rs  ide.rs  mcp.rs  mfa.rs  mod.rs  orgs.rs  personal.rs  pipelines.rs  plugins.rs  quota.rs  security_policy.rs  shared_terminal.rs  teams.rs  themes.rs  tickets.rs  tokens.rs  user_settings.rs  workspace_notes.rs  workspaces.rs  ws_terminal.rs
apps/api/src/lang_packs/: axum.md  go.md  nextjs.md  python.md  react.md  rust.md  sql.md  sqlx.md  typescript.md
apps/api/src/middleware/: auth.rs  rate_limit.rs  request_id.rs
apps/api/src/models/: secret.rs  user.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/dashboard/: Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web-client/: Dockerfile  next.config.mjs  package.json
docs/: FEASIBILITY_ANALYSIS.md  IMPLEMENTATION_SPEC.md
e2e/: package.json  playwright.config.ts
e2e/tests/: auth.setup.ts  (+2 more)
services/gateway/: Cargo.toml  Dockerfile
services/gateway/config/: default.yaml
services/gateway/src/: config.rs  main.rs  sozu_client.rs
services/git-manager/: Cargo.toml  Dockerfile
services/git-manager/config/: default.yaml
services/git-manager/src/: cloner.rs  config.rs  main.rs  worker.rs
services/mcp-gateway/: .env.example  Cargo.toml  Dockerfile
services/mcp-gateway/config/: default.yaml
services/mcp-gateway/src/: config.rs  main.rs  proxy.rs  secret.rs  session.rs
services/mcp-gateway/src/connectors/: github.rs  http.rs  jira.rs  mod.rs  notion.rs  postgres.rs  slack.rs
services/orchestrator/: Cargo.toml  Dockerfile
services/orchestrator/config/: default.yaml
services/orchestrator/src/: config.rs  docker.rs  main.rs  sozu.rs  worker.rs
services/worker/: Cargo.toml  Dockerfile
services/worker/config/: default.yaml
services/worker/src/: alerting.rs  config.rs  cron_scheduler.rs  garbage_collector.rs  git_cloner.rs  hibernation.rs  loki_shipper.rs  main.rs  pipeline_runner.rs  plugin_prober.rs  s3_exporter.rs
(+131 files in other folders)
