[workspace]
members = [
    "apps/api",
    "services/orchestrator",
    "services/worker",
    "services/git-manager",
    "services/gateway",
    "services/mcp-gateway",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
axum-client-ip = "0.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
time = { version = "0.3", features = ["serde"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "streams"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Config
figment = { version = "0.10", features = ["yaml", "env"] }
dotenvy = "0.15"

# Auth
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# Sessions
tower-sessions = { version = "0.12", features = ["memory-store"] }
tower-sessions-redis-store = "0.13"

# OAuth / JWT
oauth2 = "4"
jsonwebtoken = "9"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Encryption (SecretRef AES-256-GCM)
aes-gcm = "0.10"

# TOTP
totp-rs = { version = "5", features = ["qr"] }

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# OpenTelemetry
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["trace", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"

# Sentry
sentry = { version = "0.34", features = ["tracing"] }
sentry-tower = { version = "0.34", features = ["http"] }
