[package]
name = "koda-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "koda-api"
path = "src/main.rs"

[dependencies]
# Workspace shared
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum-client-ip = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-redis-store = { workspace = true }
oauth2 = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
totp-rs = { workspace = true }

# API-specific
futures = "0.3"
bytes = "1"
http = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
lazy_static = "1"
regex = "1"
hex = "0.4"
sha2 = { workspace = true }
hmac = { workspace = true }
base32 = "0.4"
