[package]
name = "koda-cli"
version = "0.4.4"
edition = "2021"

[[bin]]
name = "koda"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
clap = { version = "4", features = ["derive"] }
url = "2"
