[package]
name = "koda-git-manager"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "koda-git-manager"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }

# Git
git2 = "0.19"
aes-gcm = { workspace = true }
hex = { workspace = true }
