[package]
name    = "mcp-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-gateway"
path = "src/main.rs"

[dependencies]
anyhow           = "1"
async-trait      = "0.1"
redis            = { version = "0.25", features = ["aio", "tokio-comp"] }
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
sqlx             = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json"] }
tokio            = { version = "1", features = ["full"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding      = "2"
