[package]
name    = "mcp-gateway"
version = "0.4.2"
edition = "2021"

[[bin]]
name = "mcp-gateway"
path = "src/main.rs"

[dependencies]
anyhow             = "1"
async-trait        = "0.1"
dotenvy            = "0.15"
figment            = { version = "0.10", features = ["yaml", "env"] }
redis              = { version = "0.25", features = ["aio", "tokio-comp"] }
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sqlx               = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "json"] }
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding        = "2"
