[package]
name = "koda-orchestrator"
version = "0.4.2"
edition = "2021"

[[bin]]
name = "koda-orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }

# Docker
bollard = "0.17"

# sozu
sozu-command-lib = "1"
