[package]
name = "koda-worker"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "koda-worker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
regex = "1"
walkdir = "2"
time = { workspace = true }
